@@ -1,6 +1,7 @@
 Revision history for Spreadsheet-HTML
 
 0.36
+    - added handson() preset
     - restructure of preset modules that use JS
 
 0.35
